Cambio de slider

--- a/wp-content/uploads/wow-slider-plugin/3/slider.html
+++ b/wp-content/uploads/wow-slider-plugin/3/slider.html
@@ -3,18 +3,16 @@
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container3">
 <div class="ws_images"><ul>
-<li><img src="%URL%images/puente.jpg" alt="Instalación Pozo Viura 3" title="Instalación Pozo Viura 3" id="wows3_0"/></li>
-<li><img src="%URL%images/viura_1_amanecer.jpg" alt="Vista general Pozo Viura 1" title="Vista general Pozo Viura 1" id="wows3_1"/></li>
-<li><img src="%URL%images/viura_3_hor.jpg" alt="Detalle Pozo Viura 3" title="Detalle Pozo Viura 3" id="wows3_2"/></li>
-<li><img src="%URL%images/viura_3.jpg" alt="Detalle perforación Viura 3" title="Detalle perforación Viura 3" id="wows3_3"/></li>
+<li><img src="%URL%images/viura_1_2.jpg" alt="Viura_1_2" title="Viura_1_2" id="wows3_0"/></li>
+<li><img src="%URL%images/viura1_2.jpg" alt="Viura1_2" title="Viura1_2" id="wows3_1"/></li>
+<li><img src="%URL%images/viura1_3.jpg" alt="Viura1_3" title="Viura1_3" id="wows3_2"/></li>
 </ul></div>
 <div class="ws_bullets"><div>
-<a href="#" title="Instalación Pozo Viura 3"><img src="%URL%tooltips/puente.jpg" alt="Instalación Pozo Viura 3"/>1</a>
-<a href="#" title="Vista general Pozo Viura 1"><img src="%URL%tooltips/viura_1_amanecer.jpg" alt="Vista general Pozo Viura 1"/>2</a>
-<a href="#" title="Detalle Pozo Viura 3"><img src="%URL%tooltips/viura_3_hor.jpg" alt="Detalle Pozo Viura 3"/>3</a>
-<a href="#" title="Detalle perforación Viura 3"><img src="%URL%tooltips/viura_3.jpg" alt="Detalle perforación Viura 3"/>4</a>
+<a href="#" title="Viura_1_2"><img src="%URL%tooltips/viura_1_2.jpg" alt="Viura_1_2"/>1</a>
+<a href="#" title="Viura1_2"><img src="%URL%tooltips/viura1_2.jpg" alt="Viura1_2"/>2</a>
+<a href="#" title="Viura1_3"><img src="%URL%tooltips/viura1_3.jpg" alt="Viura1_3"/>3</a>
 </div></div>
-<span class="wsl"><a href="http://wowslider.com">Slideshow Freeware</a> by WOWSlider.com v4.2m</span>
+<span class="wsl"><a href="http://wowslider.com">Web Page Slideshow</a> by WOWSlider.com v4.7m</span>
 	<a href="#" class="ws_frame"></a>
 	<div class="ws_shadow"></div>
 </div>
